--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
     padding: 20px;
 }
 
-h1 {
+h1,p {
     text-align: center;
     color: #333;
 }
@@ -55,3 +55,5 @@ li {
     padding: 10px;
     border-radius: 5px;
 }
+
+
